Survey Template.html

--- a/KAIYU Survey.html
+++ b/KAIYU Survey.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta chrset="UTF-8">
-    <title>KAIYU Lighting</title>
-    <link rel="stylesheet" href="KAIYU Survey.css">
+    <title>Survey Form</title>
+    <link rel="stylesheet" href="Survey.css">
   </head>
   <body>
-  <h1 id="title">KA<span>I</span>YU</h1>
-  <p id="description">Your Trusted Light  Bulb Manufacturer</p>
+  <h1 id="title">Sur<span>V</span>EY</h1>
+  <p id="description">Survey Form Template created by Devin Lin</p>
   <form method="post" id="survey-form">
   <fielset>
     <label id="nationality-label">Nationality(Optional): <input type="text" id="number" name="nationality-label" placeholder="Where are you from?"></label>
